fixes chart visibility

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -20,9 +20,9 @@ html {
  * Remove the margin in all browsers.
  */
 
-html {
+/* html {
   overflow-x: hidden;
-}
+} */
 
 body {
   margin: 0;
